--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -9,11 +9,9 @@
       <p>
         Silicon Valley Prep is offering a variety of courses this year. Please click on the course title to expand and view the course description and curriculum.
       </p>
-      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#java">Introduction to Java & Computer Science ($400 / 5 weeks)</a></h2>
+      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#java">Introduction to Java & Computer Science ($450 / 5 weeks)</a></h2>
       <div id="java" class="collapse">
-        <!-- <h4 class="course-instructor">Course instructors: Aatash Parikh</h4> -->
-        <h5>San Jose - Dilworth Elementary (Saturday 10AM - 1PM, Sunday 2PM - 5PM)</h5>
-        <!-- <h5>Fremont - O-Mei Learning Center (Saturday 10AM - 1PM, Saturday 2PM - 5PM)</h5> -->
+        <h5>San Jose - (Saturday 10AM - 1PM, Sunday 2PM - 5PM)</h5>
         <h5 class="course-subheader">Intended for students entering grades 6-12</h5>
         <p>
           This course will be focused on introducing students to the fundamentals of computer science. Students will be taught how to program in Java and will learn the basic concepts of programming. This course will prepare students to make small applications on their own and will also provide them with enough knowledge to participate in the USA Computing Olympiad at the beginner level.
@@ -30,29 +28,21 @@
           </ul>
         </p>
       </div>
-      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#pubsp">Public Speaking ($400 / 5 weeks)</a></h2>
+      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#pubsp">Public Speaking ($450 / 5 weeks)</a></h2>
       <div id="pubsp" class="collapse">
         <!-- <h4 class="course-instructor">Course instructors: Carl Shan and Ashwin Aravind</h4> -->
-        <h5>San Jose - Dilworth Elementary (Saturday 2PM - 5PM, Sunday 10AM - 1PM)</h5>
+        <h5>San Jose - (Saturday 2PM - 5PM, Sunday 10AM - 1PM)</h5>
         <!-- <h5>Fremont - O-Mei Learning Center (Saturday 10AM - 1PM, Saturday 2PM - 5PM)</h5> -->
         <h5 class="course-subheader">Intended for students entering grades 4-9</h5>
         <p>
           This course will emphasize the teaching of confidence-building skills, public speaking techniques and principles for succeeding in life. The class will be oriented around both learning how to write and speak effectively, and will culminate in a class project that will ask students to create a final speech and present it to an audience of parents and peers. This class will revolve around the instruction of not only public speaking, but also life lessons. We hope to be a positive role model for all of our students.
         </p>
       </div>
-      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#writjourn">Essay Writing & Journalism ($400 / 5 weeks)</a></h2>
-      <div id="writjourn" class="collapse">
-        <!-- <h4 class="course-instructor">Course instructors: Carl Shan</h4> -->
-        <h5>San Jose - Dilworth Elementary (Sunday 2PM - 5PM)</h5>
-        <h5 class="course-subheader">Intended for students entering grades 4-9</h5>
-        <p>
-          Essay writing is one of the most important, but often undertaught, subjects in the field of education. Silicon Valley Prep’s Essay Writing and Journalism class will be an introduction into the proper planning, structuring and creative writing that goes into crafting both an exemplary essay or a piece of journalism. Students who enroll in this course will be introduced to many high-levels strategies and tactics for tackling intimidating essay prompts or subjects.
-        </p>
-      </div>
-      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#debarg">Debate & Argumentation ($400 / 5 weeks)</a></h2>
+  
+      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#debarg">Debate & Argumentation ($450 / 5 weeks)</a></h2>
       <div id="debarg" class="collapse">
         <!-- <h4 class="course-instructor">Course instructors: Alan Kao</h4> -->
-        <h5>San Jose - Dilworth Elementary (Saturday 2PM - 5PM, Sunday 10AM - 1PM)</h5>
+        <h5>San Jose - (Saturday 10AM - 1 PM, Sunday 10AM - 1PM)</h5>
         <!-- <h5>Fremont - O-Mei Learning Center (Saturday 10AM - 1PM)</h5> -->
         <h5 class="course-subheader">Intended for students entering grades 5-9</h5>
         <p>
@@ -69,7 +59,7 @@
           </ul>
         </p>
       </div>
-      <!-- <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#hssuper">How to be a High School Superstar ($400 / 5 weeks)</a></h2>
+      <!-- <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#hssuper">How to be a High School Superstar ($450 / 5 weeks)</a></h2>
       <div id="hssuper" class="collapse">
         <p>
           Do you want to be a high-school superstar? Do you want to stand out, without burning out? This class will deconstruct success and de-mystify what it is about amazing accomplishments that we find truly impressive. In this class, we will help students discover their own passions, learn to take advantage of opportunities or create ones if they don’t exist, and actualize their potential.
@@ -90,195 +80,6 @@
           </ul>
         </p>
       </div> -->
-      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#mcamc8">Preparation for MathCounts & AMC 8 ($400 / 5 weeks)</a></h2>
-      <div id="mcamc8" class="collapse">
-        <!-- <h4 class="course-instructor">Course instructors: TBD</h4> -->
-        <h5>San Jose - Dilworth Elementary (Saturday 2PM - 5PM)</h5>
-        <h5 class="course-subheader">Intended for students entering grades 5-8</h5>
-        <p>
-          The main purpose of this contest-prep mathematics is to spur interest in mathematics and to develop talent through the excitement of solving challenging problems in a timed multiple-choice format. The problems range from the very easy to the extremely difficult. The MathCounts and AMC contests are intended for everyone from the average student at a typical school who enjoys mathematics to the very best student at the most special school.
-        </p>
-        <p>
-          This course will be focused on preparing students to do well on the MathCounts and AMC 8 examinations. Students will be taught contest-based problem solving, which will emphasize thinking outside the box and quick problem solving strategies that are not taught within the realm of the classroom. Course topics will be covered in context of problem solving and will be geared towards the MathCounts and AMC tests rather than regular coursework that students will learn in their classes.
-        </p>
-        <p>
-          This course will be broken up into two sessions. Students are encouraged, but not required, to sign up for both.
-        </p>
-        <p>
-          Session A will cover the following topics with respect to the level of difficulty they appear on the MathCounts and AMC 8 exams:
-          <ul>
-            <li>Algebra</li>
-            <li>Probability</li>
-            <li>Combinatorics</li>
-            <li>Sequences</li>
-          </ul>
-        </p>
-        <p>
-          Session B will cover the following topics with respect to the level of difficulty they appear on the MathCounts and AMC 8 exams:
-          <ul>
-            <li>Geometry</li>
-            <li>Trigonometry</li>
-            <li>Number Bases</li>
-            <li>Functions</li>
-          </ul>
-        </p>
-      </div>
-      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#amc1012">Preparation for AMC 10 & AMC 12 ($400 / 5 weeks)</a></h2>
-      <div id="amc1012" class="collapse">
-        <!-- <h4 class="course-instructor">Course instructors: TBD</h4> -->
-        <h5>San Jose - Dilworth Elementary (Saturday 10AM - 1PM)</h5>
-        <h5 class="course-subheader">Intended for students entering grades 9-12</h5>
-        <p>
-          The main purpose of this contest-prep mathematics is to spur interest in mathematics and to develop talent through the excitement of solving challenging problems in a timed multiple-choice format. The problems range from the very easy to the extremely difficult. The AMC contests are intended for everyone from the average student at a typical school who enjoys mathematics to the very best student at the most special school.
-        </p>
-        <p>
-          This course will be focused on preparing students to do well on the AMC 10 and AMC 12 examinations. Students will be taught contest-based problem solving, which will emphasize thinking outside the box and quick problem solving strategies that are not taught within the realm of the classroom. Course topics will be covered in context of problem solving and will be geared towards the AMC tests rather than regular coursework that students will learn in their classes.
-        </p>
-        <p>
-          This course will be broken up into two sessions. Students are encouraged, but not required, to sign up for both.
-        </p>
-        <p>
-          Session A will cover the following topics with respect to the level of difficulty they appear on the AMC 10 and AMC 12 exams:
-          <ul>
-            <li>Algebra</li>
-            <li>Probability</li>
-            <li>Combinatorics</li>
-            <li>Sequences</li>
-          </ul>
-        </p>
-        <p>
-          Session B will cover the following topics with respect to the level of difficulty they appear on the AMC 10 and AMC 12 exams:
-          <ul>
-            <li>Geometry</li>
-            <li>Trigonometry</li>
-            <li>Number Bases</li>
-            <li>Functions</li>
-          </ul>
-        </p>
-      </div>
-      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#chemsat2">Private Tutoring for Chemistry</a></h2>
-      <div id="chemsat2" class="collapse">
-        <h5>For more information, contact us at tutor@svprep.org</h5>
-        <!-- <h4 class="course-instructor">Course instructors: Aniruddha Dasgupta</h4> -->
-        <!-- <h5>San Jose - Little-Champs (Sunday 2PM - 5PM)</h5> -->
-        <!-- <h5 class="course-subheader">Intended for students entering grades 9-12 who have taken one year of high school level Chemistry or equivalent.</h5> -->
-        <p>
-          1-on-1 tutoring sessions will be held by instructors who are incredibly passionate about the magic of Chemistry. Our tutors have received flawless AP scores of 5 and scored perfect 800s on the SAT II test. Tutoring is available to students of all ages and levels, ranging from middle-school Chemistry to advanced AP Chemistry preparation. For more information contact us at tutor@svprep.org!
-        </p>
-        <!-- <p>
-          The course will cover the following topics:
-          <ul>
-            <li>Atomic Theory and Atomic Structure</li>
-            <li>Chemical Bonding</li>
-            <li>Nuclear Chemistry</li>
-            <li>Gases</li>
-            <li>Liquids and Solids</li>
-            <li>Solutions</li>
-            <li>Reaction Types</li>
-            <li>Stoichiometry</li>
-            <li>Equilibrium</li>
-            <li>Kinetics</li>
-            <li>Thermodyamics</li>
-            <li>Descriptive Chemistry</li>
-            <li>Laboratory</li>
-          </ul>
-        </p> -->
-      </div>
-      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#physsat2">Private Tutoring for Physics</a></h2>
-      <div id="physsat2" class="collapse">
-        <h5>For more information, please contact us at tutor@svprep.org</h5>
-        <p>
-          1-on-1 tutoring sessions will be held by instructors who are incredibly passionate about the beauty of Physics. Our tutors have received flawless AP scores of 5 and scored perfect 800s on the SAT II test. Tutoring is available to students of all ages and levels, ranging from middle-school Physics to advanced AP Physics C preparation. For more information contact us at tutor@svprep.org!
-        </p>
-        <!-- <h4 class="course-instructor">Course instructors: Naveen Venkatesan</h4> -->
-        <!-- <h5>San Jose - Little-Champs (Saturday 2PM - 5PM)</h5>
-        <h5 class="course-subheader">Intended for students entering grades 9-12 who have taken one year of high school level Physics or equivalent.</h5>
-        <p>
-          The world is an amazing place. Even more amazing are the fundamental laws that govern and guide it. This class will be taught by instructors who are incredibly passionate about the beauty and joy of Physics. Through this class, we will not only give students the fundamentals and strategies revolving around the AP Physics C Mechanics and Electricity & Magnetism tests, but also foster a passion in studying Physics and other sciences. Our instructors have all scored flawless AP scores of 5 on the AP Physics exams and perfect 800s on the SAT II test. Students will leave this class prepared and well-equipped for taking on a full-fledged course on AP Physics C during the school year.
-        </p>
-        <p>
-          The course will cover the following topics:
-          <ul>
-            <li>Kinematics (including vectors, vector algebra, components of vectors, coordinate systems, displacement, velocity and acceleration)</li>
-            <li>Newton's Laws of Motion</li>
-            <li>Work, Energy, Power</li>
-            <li>Systems of Particles and Linear Momentum</li>
-            <li>Circular Motion and Rotation</li>
-            <li>Oscillations and Gravitation</li>
-            <li>Electrostatics</li>
-            <li>Conductors, Capacitors, Dielectrics</li>
-            <li>Electric Circuits</li>
-            <li>Magnetic Fields</li>
-            <li>Electromagnetism</li>
-          </ul>
-        </p> -->
-      </div>
-      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#biosat2">Private Tutoring for Biology</a></h2>
-      <div id="biosat2" class="collapse">
-        <h5>For more information, please contact us at tutor@svprep.org</h5>
-        <p>
-          1-on-1 tutoring sessions will be held by instructors who are incredibly passionate about the wonders of Biology. Our tutors have received flawless AP scores of 5 and scored perfect 800s on the SAT II test. Tutoring is available to students of all ages and levels, ranging from middle-school Biology to advanced AP Biology preparation. For more information contact us at tutor@svprep.org!
-        </p>
-        <!-- <h4 class="course-instructor">Course instructors: Sudi Bhat</h4> -->
-        <!-- <h5>San Jose - Little-Champs (Sunday 2PM - 5PM)</h5>
-        <h5 class="course-subheader">Intended for students entering grades 9-12 who have taken one year of high school level Biology or equivalent.</h5>
-        <p>
-          Are you interested in focusing on the sciences or pre-med track in college? If so, a deep and thorough understanding of biology will be crucial to your success. Our instructors are very experienced in exposing the profound nature of the world through the study of Biology. Through this class, we will not only give students the fundamentals and strategies revolving around taking the AP Biology test, but also create a genuine passion in Biology and other sciences. Our instructors have received flawless AP scores of 5 and scored perfect 800s on the SAT II test. Students will leave this class prepared and well-equipped for taking on AP Biology during the school year.
-        </p>
-        <p>
-          The course will cover the following topics:
-          <ul>
-            <li>Principles of Life</li>
-            <li>Cells</li>
-            <li>Cellular Energetics</li>
-            <li>Heredity</li>
-            <li>Molecular Genetics</li>
-            <li>Evolutionary Biology</li>
-            <li>Diversity of Organisms</li>
-            <li>Structure and Function of Plants and Animals</li>
-            <li>Ecology</li>
-          </ul>
-        </p> -->
-      </div>
-      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#mathsat2">Private Tutoring for Mathematics</a></h2>
-      <div id="mathsat2" class="collapse">
-        <h5>For more information, please contact us at tutor@svprep.org</h5>
-        <p>
-          1-on-1 tutoring sessions will be held by instructors who are incredibly passionate about the elegance of Mathematics. Our tutors have received flawless AP scores of 5 and scored perfect 800s on the SAT II test. Tutoring is available to students of all ages and levels, ranging from elementary-school Mathematics to advanced AP Calculus and AP Statistics preparation. For more information contact us at tutor@svprep.org!
-        </p>
-        <!-- <h4 class="course-instructor">Course instructors: TBD</h4> -->
-        <!-- <h5>San Jose - Little-Champs (Saturday 2PM - 5PM)</h5>
-        <h5 class="course-subheader">Intended for students entering grades 9-12 who have taken Algebra 2 & Trigonometry or equivalent.</h5>
-        
-        <p>
-          This class is intended for students who have yet to take Pre-Calculus Honors, or who will be taking AP Calculus AB/BC and would like remedial tutoring. Our tutor will help students ace the placement test taken at their school near the end of summer that allows them to skip out of Pre-Calculus Honors. Our instructors have received flawless AP Calculus scores of 5 and scored perfect 800s on the SAT II test. Students will leave this class prepared and well-equipped for taking on the challenges of Pre-Calculus Placement Exam and AP Calculus B/C.
-        </p>
-        <p>
-          The course will cover the following topics:
-          <ul>
-            <li>Scope and Sequence</li>
-            <li>Review of Algebra</li>
-            <li>Polynomial Functions</li>
-            <li>Vectors</li>
-            <li>Properties of Functions</li>
-            <li>Rational Functions</li>
-            <li>Polar/Parametric Coordinates</li>
-            <li>Sequences and Series</li>
-            <li>Partial Fractions</li>
-            <li>Matrices</li>
-            <li>Proof by Induction</li>
-            <li>Exponential Functions</li>
-            <li>Systems of Equations</li>
-            <li>Binomial Theorem</li>
-            <li>Logarithmic Functions</li>
-            <li>Trigonometric Functions</li>
-            <li>Probability and Statistics</li>
-            <li>Conic Sections</li>
-            <li>Applications of Trigonometry</li>
-            <li>Analytic Trigonometry</li>
-          </ul>
-        </p> -->
-      </div>
     </div>
   </div>
   <div class='well ac'>
