--- a/views/discounts.ejs
+++ b/views/discounts.ejs
@@ -8,15 +8,19 @@
     <div class='span16'>
       <h3>Multiple Class Discount</h3>
       <p>
-		For each additional class you sign up for after the first one, you will receive <b>$50</b> off your total. For example, if you sign up for three classes, you will get a $100 discount, making your total $1,100 instead of $1,200.
+		For each additional class you sign up for after the first one, you will receive <b>$50</b> off your total. For example, if you sign up for three classes, you will get a $100 discount from your total purchase price.
       </p>
       <h3>Sibling Discount</h3>
       <p>
-        If you have multiple children sign up for classes, you will receive <b>$50</b> off of your total on top of any additional discounts.
+        If you have an additional child sign up for classes, you will receive <b>$50</b> off of your total on top of any additional discounts. For example, if you sign up 3 children, you will get a <b>$100</b> discount.
       </p>
       <h3>Referral Discount</h3>
       <p>
-        For each person that you refer, you will receive <b>$30</b> off your total on top of any additional discounts.
+        For each person that you refer, you will receive <b>$50</b> off your total on top of any additional discounts. You can refer up to 4 people, for a max of <b>$200</b> off your total price.
+      </p>
+      <h3>Referred Bonus</h3>
+      <p>
+        If you get referred, send us the information of the referrer and you will receive <b>$10</b> off your total price.
       </p>
       <h3>Price Matching Policy</h3>
       <p>
