--- a/views/instructors.ejs
+++ b/views/instructors.ejs
@@ -5,6 +5,62 @@
 </div>
 <div class='container content'>
   <div class='row'>
+    <h2 class="heading">Organizers</h2>
+    <div class='row'>
+      <div class='span2'>
+        <p>
+          <img alt='Gerald' src='/images/facepics/gerald.png' width='100' />
+        </p>
+      </div>
+      <div class='span14'>
+        <h4>Gerald Fong, Organizer & Instructor</h4>
+        <p>
+	Gerald Fong is a second year at UC Berkeley studying Electrical Engineering and Computer Science. He started his interest for computer science in highschool when he took 8 CS courses from Lynbrook and De Anza College. His senior year, he interned at a startup called RewardMe when he got he developed J2EE Java Web Applications. This past summer, Gerald interned at Twitter and since freshmen year he has been offered internships at companies including Google, Facebook, LinkedIn, and Dropbox. This coming summer, he is interning at Stripe to make a bigger impact in the start-up world. During high school he was valedictorian and graduation speaker with a 4.0 unweighted GPA and a 4.7 weighted GPA. He has also attained 800 in SAT II Physics and 800 in SAT II Math. At Lynbrook was served as Vice President of his class, Vice President of the Model UN club, President of the piano club, and an Eagle Scout from Troop 495. Gerald is excited to take his academic and industry experiences to teach the next generation!
+        </p>
+      </div>
+    </div>
+    <div class='row'>
+      <div class='span2'>
+        <p>
+          <img alt='Sharad' src='/images/facepics/sharad.png' width='100' />
+        </p>
+      </div>
+      <div class='span14'>
+        <h4>Sharad Vikram, Organizer & Instructor</h4>
+        <p>
+	Sharad Vikram is currently a sophomore at UC Berkeley, studying Electrical Engineering and Computer Science. Sharad's love of computer science is best shown by his internships at the San Diego Supercomputer Center, Cubic Transportation Systems, and RewardMe. He will also be interning at Facebook this summer. Sharad has been actively programming at Berkeley and has won several hackathons, beating teams from Stanford, Harvard, and MIT. A graduate of Torrey Pines High School in San Diego, Sharad is currently an Undergraduate Student Instructor at Berkeley, teaching the introductory computer science course and he will be passing on his knowledge to SVPrep students this summer!
+        </p>
+      </div>
+    </div>
+    <h2 class="heading">Instructors</h2>
+    <div class='row'>
+      <div class='span2'>
+        <p>
+          <img alt='Iris' src='/images/facepics/iris.png' width='100' />
+        </p>
+      </div>
+      <div class='span14'>
+        <h4>Iris Wang, Instructor - Computer Science</h4>
+        <p>
+          Iris Wang is a sophomore at University of California, Berkeley pursuing a degree in Computer Science. She is currently a course reader for the introductory computer science class at Berkeley and will be an intern at Facebook this summer. She is interested in data structures and artificial intelligence.
+        </p>
+      </div>
+    </div>
+    <div class='row'>
+      <div class='span2'>
+        <p>
+          <img alt='Alan' src='/images/facepics/alan.png' width='100' />
+        </p>
+      </div>
+      <div class='span14'>
+        <h4>Alan Kao, Instructor - Debate & Argumentation</h4>
+        <p>
+          Alan is currently a freshman at UC Berkeley, pursuing dual Bachelors degree in Computer Science and Statistics. Having a strong interest in computer programming, Alan’s interest in data driven software development has led to his being offered a position at IBM’s Almaden Research Center for database related work. Further, Alan also has a strong background in  logical reasoning, debate, and public speaking; having qualified to the most prestigious debate tournament twice in his high school career and served as Lynbrook High School’s co-president for debate from 2010-2011, Alan is excited to teach share everything that he can with his students!
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class='row'>
     <h2 class="heading">Founders</h2>
     <div class='row'>
       <div class='span2'>
@@ -41,13 +97,11 @@
       <div class='span14'>
         <h4>Tony Ho, Co-Founder</h4>
         <p>
-          Tony is currently a student at Harvard College, pursuing a Bachelors in Applied Mathematics and a Masters in Computer Science through a specialized 4 year program. As a top finisher in math and science competitions, including the Intel Science Talent Search (STS), Intel International Science & Engineering Fair (ISEF), USA Computing Olympiad (USACO), USA Mathematics Olympiad (USAMO), and the USA Physics Olympiad (USAPhO), Tony is no stranger to problem solving. Tony has also conducted scientific research at Stanford University and has completed a summer internship at Google, working as a software engineer. His current interests have been geared to create competitive applications that pose some impact on the real world. Tony has become very involved in creating a community for Computer Science at Harvard while attempting to create the next Facebook. He wants to pass his knowledge in Math and Computer Science to the new students he is going to teach!
+          Tony is currently a student at Harvard College, pursuing a Bachelors in Applied Mathematics and a Masters in Computer Science through a specialized 4 year program. As a top finisher in math and science competitions, including the Intel Science Talent Search (STS), Intel International Science & Engineering Fair (ISEF), USA Computing Olympiad (USACO), USA Mathematics Olympiad (USAMO), and the USA Physics Olympiad (USAPhO), Tony is no stranger to problem solving. Tony has also conducted scientific research at Stanford University and has completed a summer internship at Google, working as a software engineer. His current interests have been geared to create competitive applications that pose some impact on the real world. Tony has become very involved in creating a community for Computer Science at Harvard while attempting to create the next Facebook. <!-- He wants to pass his knowledge in Math and Computer Science to the new students he is going to teach! -->
         </p>
       </div>
     </div>
-  </div>
-  <div class='row'>
-    <h2 class="heading">Instructors</h2>
+    <!--
     <div class='row'>
       <div class='span2'>
         <p>
@@ -97,19 +151,6 @@
         <h4>Kimberly Tan, Instructor - Essay Writing & Journalism</h4>
         <p>
           Kimberly is an incoming senior and currently attends Lynbrook High School. As Vice President of her school's 200-member speech and debate team, she travels across the country attending debate tournaments and has a multitude of experience in public speaking and argumentation. Outside of debate, she is also extremely passionate about creative and expository writing, tutoring students in essay-writing and writing for Lynbrook's literary magazine. In order to foster creative growth in her community, she also established a literary magazine, named Overture Literary Magazine, at her local middle school, and is working on expanding it to other middle schools in San Jose  She hopes to encourage others to polish their writing skills and recognize the value writing holds in every activity and occupation.
-        </p>
-      </div>
-    </div>
-    <div class='row'>
-      <div class='span2'>
-        <p>
-          <img alt='Alan' src='/images/facepics/alan.png' width='100' />
-        </p>
-      </div>
-      <div class='span14'>
-        <h4>Alan Kao, Instructor - Debate & Argumentation</h4>
-        <p>
-          Alan is currently a freshman at UC Berkeley, pursuing dual Bachelors degree in Computer Science and Statistics. Having a strong interest in computer programming, Alan’s interest in data driven software development has led to his being offered a position at IBM’s Almaden Research Center for database related work. Further, Alan also has a strong background in  logical reasoning, debate, and public speaking; having qualified to the most prestigious debate tournament twice in his high school career and served as Lynbrook High School’s co-president for debate from 2010-2011, Alan is excited to teach share everything that he can with his students!
         </p>
       </div>
     </div>
@@ -214,6 +255,7 @@
       </p>
     </div>
   </div>
+  -->
 </div>
   <div class='well ac'>
     <h3>
