--- a/views/logistics.ejs
+++ b/views/logistics.ejs
@@ -8,10 +8,10 @@
     <div class='span16'>
       <h3>Dates</h3>
       <p>
-		    <b>Program Dates</b>: June 16 to August 19
+		    <b>Program Dates</b>: June 15 to August 18
         <ul>
-          <li><b>Session A</b>: June 16 to July 15</li>
-          <li><b>Session B</b>: July 21 to August 19</li>
+          <li><b>Session A</b>: June 15 to July 13</li>
+          <li><b>Session B</b>: July 20 to August 18</li>
         </ul>
       </p>
       <h3>Timings</h3>
@@ -28,11 +28,11 @@
       </p>
       <h3>Location</h3>
       <p>
-        Silicon Valley Prep has two locations in the San Jose / Cupertino area. Please take a look at the <a href="/courses">courses page</a> to see where each course is offered. Unfortunately we've had to get rid of our Fremont location because of logistical issues and will only be offering classes in the San Jose / Cupertino area this summer. People from Fremont are more than welcome to come take classes in our other locations!
-        <h5>San Jose</h5>
+        Silicon Valley Prep has one location in the San Jose / Cupertino area. Please take a look at the <a href="/courses">courses page</a> to see where each course is offered. Unfortunately we've had to get rid of our Fremont location because of logistical issues and will only be offering classes in the San Jose / Cupertino area this summer. People from Fremont are more than welcome to come take classes in our other locations!
+        <!-- <h5>San Jose</h5> -->
         <ul>
-          <li><b>Location 1</b>: Dilworth Elementary School at 1101 Strayer Drive, San Jose, CA 95129</li>
-          <li><b>Location 2</b>: Little-Champs Enrichment Center at 1025 South De Anza Blvd, San Jose, CA, 95129</li>
+          <!-- <li><b>Location 1</b>: Dilworth Elementary School at 1101 Strayer Drive, San Jose, CA 95129</li> -->
+          <li><b>Location</b>: TBA</li>
         </ul>
         <!-- <h5>Fremont/Milpitas</h5>
         <ul>
