--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,7 +6,7 @@
 <div class='container content'>
   <div style="margin-bottom:30px;">
     <p>
-      Welcome to the sign-up page! You may sign your child up for up to <b>four</b> classes <b>each session</b>. Classes cost a flat rate of $400, which you do not have to pay today! We will e-mail you before the first week of classes to confirm the total cost of the program after subtracting all your discounts; you are not obligated to pay anything until the day of the first class! Additionally, the first day of class is <b>absolutely FREE</b>. If you don't want to continue the program after the first class, we will give you a <b>FULL refund</b>, no questions asked.
+      Welcome to the sign-up page! You may sign your child up for up to <b>four</b> classes <b>each session</b>. Classes cost a flat rate of $450, which you do not have to pay today! We will e-mail you before the first week of classes to confirm the total cost of the program after subtracting all your discounts; you are not obligated to pay anything until the day of the first class! Additionally, the first day of class is <b>absolutely FREE</b>. If you don't want to continue the program after the first class, we will give you a <b>FULL refund</b>, no questions asked.
     </p>
 	  <p>
       Please select classes based on the day and time drop-down menus below. Given the nature of our classes, we can only offer certain courses if there is sufficient interest. As classes are contingent upon demand and instructor availabilities, we will confirm your child’s enrollment as soon as possible, and a final confirmation email will be sent at the latest on <b>April 16th</b>.
@@ -48,7 +48,6 @@
               <select id="sat101-a" name="sat101-a" class="span5">
                 <option value="noclass-sat101-a">No class selected</option>
                 <option value="java-sat101-a-sj">Intro to Java & Computer Science - grades 6-10</option>
-                <option value="amc1012-sat101-a-sj">Preparation for AMC 10 & AMC 12 - grades 8-12</option>
                 <!-- <option value="java-sat101-a-f">Intro to Java & Computer Science - grades 6-8 (Milpitas)</option>
                 <option value="pubsp-sat101-a-f">Public Speaking - grades 4-6 (Milpitas)</option>
                 <option value="debarg-sat101-a-f">Debate & Argumentation - grades 6-9 (Milpitas)</option> -->
@@ -71,7 +70,6 @@
                 <option value="noclass-sat25-a">No class selected</option>
                 <option value="pubsp-sat25-a-sj">Public Speaking - grades 7-9</option>
                 <option value="debarg-sat25-a-sj">Debate & Argumentation - grades 6-9</option>
-                <option value="mcamc8-sat25-a-sj">Preparation for MathCounts & AMC 8 - grades 5-8</option>
                 <!-- <option value="physsat2-sat25-a-sj">Small Group Tutoring for AP Physics C - grades 9-12</option> -->
                 <!-- <option value="mathsat2-sat25-a-sj">Small Group Tutoring to Prepare for the Pre-Calculus Placement Exam - grades 9-12</option> -->
                 <!-- <option value="java-sat25-a-f">Intro to Java & Computer Science - grades 9-12 (Milpitas)</option>
@@ -83,7 +81,6 @@
               <select id="sun25-a" name="sun25-a" class="span5">
                 <option value="noclass-sun25-a">No class selected</option>
                 <option value="java-sun25-a-sj">Intro to Java & Computer Science - grades 6-10</option>
-                <option value="writjourn-sun25-a-sj">Essay Writing & Journalism - grades 5-9</option>
                 <!-- <option value="hssuper-sun25-a-sj">How to be a Highschool Superstar - grades 9-11</option> -->
                 <!-- <option value="chemsat2-sun25-a-sj">Small Group Tutoring for AP Chemistry - grades 9-12</option> -->
                 <!-- <option value="biosat2-sun25-a-sj">Small Group Tutoring for AP Biology - grades 9-12</option> -->
@@ -102,7 +99,6 @@
               <select id="sat101-b" name="sat101-b" class="span5">
                 <option value="noclass-sat101-b">No class selected</option>
                 <option value="java-sat101-b-sj">Intro to Java & Computer Science - grades 6-10</option>
-                <option value="amc1012-sat101-b-sj">Preparation for AMC 10 & AMC 12 - grades 8-12</option>
                 <!-- <option value="java-sat101-b-f">Intro to Java & Computer Science - grades 6-8 (Milpitas)</option>
                 <option value="pubsp-sat101-b-f">Public Speaking - grades 4-6 (Milpitas)</option>
                 <option value="debarg-sat101-b-f">Debate & Argumentation - grades 6-9 (Milpitas)</option> -->
@@ -125,7 +121,6 @@
                 <option value="noclass-sat25-b">No class selected</option>
                 <option value="pubsp-sat25-b-sj">Public Speaking - grades 7-9</option>
                 <option value="debarg-sat25-b-sj">Debate & Argumentation - grades 6-9</option>
-                <option value="mcamc8-sat25-b-sj">Preparation for MathCounts & AMC 8 - grades 5-8</option>
                 <!-- <option value="physsat2-sat25-b-sj">Small Group Tutoring for AP Physics C - grades 9-12</option> -->
                 <!-- <option value="mathsat2-sat25-b-sj">Small Group Tutoring to Prepare for the Pre-Calculus Placement Exam - grades 9-12</option> -->
                 <!-- <option value="java-sat25-b-f">Intro to Java & Computer Science - grades 9-12 (Milpitas)</option>
@@ -137,7 +132,6 @@
               <select id="sun25-b" name="sun25-b" class="span5">
                 <option value="noclass-sun25-b">No class selected</option>
                 <option value="java-sun25-b-sj">Intro to Java & Computer Science - grades 6-10</option>
-                <option value="writjourn-sun25-b-sj">Essay Writing & Journalism - grades 5-9</option>
                 <!-- <option value="hssuper-sun25-b-sj">How to be a Highschool Superstar - grades 9-11</option> -->
                 <!-- <option value="chemsat2-sun25-b-sj">Small Group Tutoring for AP Chemistry - grades 9-12</option> -->
                 <!-- <option value="biosat2-sun25-b-sj">Small Group Tutoring for AP Biology - grades 9-12</option> -->
@@ -156,7 +150,6 @@
         </div>
       </div>
       <div class="control-group">
-        <label class="control-label" for="select01">Grade (in Fall 2012)</label>
         <div class="controls">
           <select id="select01" name="grade" style="width: 300px;">
             <option>Please select an option</option>
@@ -212,6 +205,7 @@
       </div>
       <div class="form-actions">
         <button type="submit" class="btn success">Submit</button>
+	<script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button" data-key="pk_test_czwzkTp2tactuLOEOqbMTRzG"></script>
       </div>
     </fieldset>
   </form>
